--- a/PROJETO-1/index.html
+++ b/PROJETO-1/index.html
@@ -21,7 +21,7 @@
     <body>
         <div id="hero">
             <img 
-                src="/Users/gabriel/Rocketseat/PROJETO-1/images/img1.jpg" 
+                src="./images/img1.jpg" 
                 alt="Desenho de uma pessoa vestindo camisa amarela em uma sala com móveis"
             >
 
@@ -52,7 +52,7 @@
 
         <img 
             id="balls"
-            src="/Users/gabriel/Rocketseat/PROJETO-1/images/balls.svg" 
+            src="./images/balls.svg" 
             alt="Bolinhas alaranjadas no canto inferior direito da tela"
         >
 
